adjusting sass to match style guide

--- a/src/sass/_crn-variables.scss
+++ b/src/sass/_crn-variables.scss
@@ -23,7 +23,7 @@ $primaryHover: lighten($primary,15%);
 $brand-primary:         $primary;
 $brand-success:         #24C85E !default;
 $brand-info:            #24C8C8 !default;
-$brand-warning:         #C88E24 !default;
+$brand-warning:         #F7BA4B !default;
 $brand-danger:          #C82424 !default;
 
 //ssp weights:300, 400, 700 - italic 300, 400 , 700
