--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -136,23 +136,24 @@ h1,h2,h3,h4,h5,h6{
 				position: absolute;
 				padding: 0;
 				background-color: rgba(0, 0, 0, 0.28);
-									  width: 30%;
-  height: 30%;
-  line-height: 25px;
-  transition: all 0.3s ease;
+				width: 30%;
+				height: 30%;
+				line-height: 25px;
+				transition: all 0.3s ease;
 
 			}
 
 			&.active,
 			&:active,
 			&:hover,
+			&.hover
 			&:focus{
 				i{
 					transition: all 0.3s ease;
 					background-color: rgba(0, 0, 0, 0.28);
-										  width: 100%;
-  height: 100%;
-  line-height: 75px;
+					width: 100%;
+					height: 100%;
+					line-height: 75px;
 				}
 			}
 		}
@@ -239,7 +240,9 @@ h1,h2,h3,h4,h5,h6{
 	margin: 0 0 10px;
 
 	&:hover,
-	&:active {
+	&:active,
+	&.hover,
+	&.active {
 		border-color:$primaryHover;
 		background: #fafafa;
 		color:$primaryHover;
@@ -251,7 +254,9 @@ h1,h2,h3,h4,h5,h6{
 	color: #777;
 	border-radius: 2px;
 	&:hover,
-	&:active {
+	&:active,
+	&.hover,
+	&.active  {
 		border-color:#aaa;
 		background: #e0e0e0;
 		color:#666;
@@ -280,9 +285,12 @@ h1,h2,h3,h4,h5,h6{
 	text-transform: uppercase;
 	transition: all 0.3s ease-out;
 	&:hover,
-	&:active  {
+	&:active,
+	&.hover,
+	&.active  {
 		background: darken($sky, 10%);
 		transition: all 0.3s ease-out;
+		color:#fff;
 	}
 }
 
@@ -358,9 +366,11 @@ h1,h2,h3,h4,h5,h6{
 	padding: 0px 10px;
 	border: none;
 	background: rgba(255,255,255,1);
+	border-radius:2px;
+	box-shadow: inset 0px 0px 1px 1px rgba(0, 0, 0, 0.14);
 }
 
-.form-group textarea {
+textarea {
 	width: 100%;
 	min-height: 200px;
 	font-size: 22px;
@@ -369,6 +379,8 @@ h1,h2,h3,h4,h5,h6{
 	padding: 15px 10px;
 	border: none;
 	background: rgba(255,255,255,1);
+	border-radius:2px;
+	box-shadow: inset 0px 0px 1px 1px rgba(0, 0, 0, 0.14);
 }
 
 // annimations ================================================================ 
