adding truthy to spinner

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1102,7 +1102,7 @@ body,
 }
 //dataset loading icon spinner 
 .loading-wrap{
-	padding: 0;
+	padding: 10px 0;
 	text-align: center;
 	position:relative;
 	span{
