--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -324,7 +324,6 @@ h1,h2,h3,h4,h5,h6{
 		border: none;
 	    color: $primary;
 	    background:none;
-	    padding: 6px 0;
 	    &:hover{
 	    	color: $primaryHover;
 	    }
@@ -1102,7 +1101,7 @@ body,
 }
 //dataset loading icon spinner 
 .loading-wrap{
-	padding: 10px 0;
+	padding: 20px 0 30px;
 	text-align: center;
 	position:relative;
 	span{
@@ -1117,43 +1116,43 @@ body,
 
 .spinner,
 .spinnerinner {
-  position: relative;
-  border: 4px solid $turquoise;
-  border-color: transparent $turquoise;
-  margin: auto;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
-   width: 45px;
- height: 45px;
- padding: 0;
-  margin: 0;
+	position: relative;
+	border: 4px solid $turquoise;
+	border-color: transparent $turquoise;
+	margin: auto;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	border-radius: 50%;
+	width: 45px;
+	height: 45px;
+	padding: 0;
+	margin: 0;
 }
 
 
 
 .spinner {
- animation: spin 4s linear 0s infinite normal;
-margin: 0 auto;
+	animation: spin 4s linear 0s infinite normal;
+	margin: 0 auto;
 }
 
 .spinnerinner{
-  border-width: 2px;
-  margin: 21%;
-  padding: 0;
-  border-radius: 50%;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  display: block;
-  width: 60%;
-  height: 60%;
-   animation: innerspin  1s linear 0s infinite normal;
+	border-width: 2px;
+	margin: 21%;
+	padding: 0;
+	border-radius: 50%;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	display: block;
+	width: 60%;
+	height: 60%;
+	animation: innerspin  1s linear 0s infinite normal;
 }
 
 }
@@ -1308,6 +1307,7 @@ to { -webkit-transform: rotate(360deg) }
 			}
 			.panel-collapse {
 				.panel-body{
+					overflow:hidden;
 					border:none;
 					background:transparent;
 					padding: 0 ;
@@ -1317,11 +1317,11 @@ to { -webkit-transform: rotate(360deg) }
 						padding:10px 20px;
 						border-top: 1px solid #ddd;
 					}
-					.footer{
+					.inner-right{
 							height: 50px;
 							border-top:1px solid #ddd;
 							margin:0;
-							padding: 10px 20px;
+							padding:0;
 							text-align: right;
 							.delete-text{
 								vertical-align: middle;
@@ -1331,6 +1331,21 @@ to { -webkit-transform: rotate(360deg) }
 								text-transform: uppercase;
 								margin-top: 5px;
 								
+							}
+							.btn-admin.warning{
+								    padding: 16px 20px;
+							}
+							.btn-admin.delete{
+								border: none;
+							    color: $white;
+							    background-color: $brand-danger;
+							    height: 50px;
+							    &:hover{
+							    	background:darken($brand-danger, 10%)
+							    }
+							}
+							.btn-admin.cancel{
+								    height: 50px;
 							}
 					}
 				}
