--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1309,7 +1309,6 @@ to { -webkit-transform: rotate(360deg) }
 			}
 			.panel-collapse {
 				.panel-body{
-					overflow:hidden;
 					border:none;
 					background:transparent;
 					padding: 0 ;
@@ -1325,13 +1324,14 @@ to { -webkit-transform: rotate(360deg) }
 							margin:0;
 							padding:0;
 							text-align: right;
-							.delete-text{
+							&.delete-data{
 								vertical-align: middle;
 								display: block;
 								text-align: right;
 								font-size: 13px;
 								text-transform: uppercase;
 								margin-top: 5px;
+								overflow:hidden;
 								
 							}
 							.btn-admin.warning{
