minor bugs and user/dirInput styling

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1320,6 +1320,9 @@ to { -webkit-transform: rotate(360deg) }
 		.panel-group .panel+.panel{
 			margin: 0;
 		}
+		p.no-datasets{
+			padding:20px;
+		}
 		.panel{
 			border-radius: 0;
 			border: none;
